--- a/src/views/GiyimViews/PageS.css
+++ b/src/views/GiyimViews/PageS.css
@@ -13,6 +13,7 @@
 .sepetItem{
     padding: 1em;
     display: flex;
+    width: 500px;
 }
 .itemImg{
     padding: 0 1em 0 1em;
@@ -26,6 +27,9 @@
     padding: 1em;
 }
 .itemDel{
+    display: flex;
+    width: 2em;
+    height: 1.5em;
     border: 3px black double;
     padding: 0.2em 0.5em;
 }
