--- a/src/views/GiyimViews/PageS.css
+++ b/src/views/GiyimViews/PageS.css
@@ -2,6 +2,7 @@
     display: flex;
     margin: 2em 5em 2em 5em;
     justify-content:space-evenly;
+    min-height: 60vh;
 }
 .sepetCard{
     display: flex;
