--- a/src/views/AnimeViews/AnimeView.css
+++ b/src/views/AnimeViews/AnimeView.css
@@ -1,6 +1,4 @@
-.fullPage{
-    display: flex;
-    flex-direction: column;
+.fullAnimePage{
     margin: 0;
     min-height: 100vh;
     background-image:url("/src/views/AnimeViews/img/wp/anime1.jpg");
