--- a/src/views/AnimeViews/AnimeComponent/Css/AnimeCard.css
+++ b/src/views/AnimeViews/AnimeComponent/Css/AnimeCard.css
@@ -2,9 +2,9 @@
     flex-direction: column;
     align-items: center;
     display: flex;
-    width: 210px;
-    height: 325px;
-    margin: 1em;
+    width: 180;
+    margin: 1.2em 1.5em;
+    
 }
 .aCardImg{
     width: 180px;
@@ -14,11 +14,14 @@
     background-size: cover;
 }
 .aCardImg:hover{
-    width: 190px;
-    height: 270px;
+    box-shadow: -10px -10px 10px -5px rgb(72 , 109, 242);
+}
+.aCardImg:active{
+    box-shadow: -5px -5px 10px 0px red;
 }
 .aCardInfo{
     text-align: center;
+    padding: 0.5em;
 }
 
 /* image px
