--- a/src/views/AnimeViews/AnimeComponent/Css/TopAnimeList.css
+++ b/src/views/AnimeViews/AnimeComponent/Css/TopAnimeList.css
@@ -6,12 +6,10 @@
 }
 .swiper {
     width: 100%;
-    height: 100%;
   }
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    padding: 0 0 2em 0;
   
     /* Center slide text vertically */
     display: -webkit-box;
@@ -29,8 +27,7 @@
   }
 .swiper-slide img {
     display: block;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
     object-fit: cover;
   }
 .swiper {
