--- a/src/views/AnimeViews/AnimeComponent/Css/TypeAnime.css
+++ b/src/views/AnimeViews/AnimeComponent/Css/TypeAnime.css
@@ -8,3 +8,50 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+.slider2{
+    display: none;
+}
+.slider3{
+    display: none;
+}
+.slider4{
+    display: none;
+}
+
+@media screen and (max-width: 810px) {
+    .slider1{
+        display: none;
+    }
+    .slider2{
+        display: block;
+    }
+    .slider3{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 630px) {
+    .slider1{
+        display: none;
+    }
+    .slider2{
+        display: none;
+    }
+    .slider3{
+        display: block;
+    }
+}
+@media screen and (max-width: 430px) {
+    .slider1{
+        display: none;
+    }
+    .slider2{
+        display: none;
+    }
+    .slider3{
+        display: none;
+    }
+    .slider4{
+        display: block;
+    }
+}
