--- a/src/views/AnimeViews/AnimeComponent/Css/Takvim.css
+++ b/src/views/AnimeViews/AnimeComponent/Css/Takvim.css
@@ -1,5 +1,13 @@
+.aTakvimHead{
+    font-size: 1.6em;
+    padding: 0.4em 0 0.6em;
+    display: flex;
+    justify-content: center;
+    background: linear-gradient( rgba(40,40,40,0.9),black,rgba(40,40,40,0.9));
+    color: rgb(200, 0, 0);
+}
 .fullTakvim{
-    font-size: 1.4em;
+    font-size: 1.3em;
     display: flex;
     justify-content: center;
     min-height: 200px;
