--- a/src/views/AnimeViews/AnimeComponent/Css/Takvim.css
+++ b/src/views/AnimeViews/AnimeComponent/Css/Takvim.css
@@ -10,7 +10,27 @@
     font-size: 1.3em;
     display: flex;
     justify-content: center;
-    min-height: 200px;
     background: linear-gradient( rgba(40,40,40,0.9),black);
     color: rgb(200, 0, 0);
+}
+.takvimDays{
+    max-width:  1500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.takvimAnime{
+    color: white;
+}
+.takvimDay{
+    display: flex;
+    justify-content: center;
+    font-size: 1.2em;
+    
+}
+.DayAnime{
+    padding: 0.3em;
+    margin: 0.2em;
+    width: 250px;
+    border: 2px grey solid;
 }
